* Bugfix: Cookie lifetime input boxes are in some cases shown or hidden by mistake * Test script: Settings dump added * Donation box re-added to the settings page
git-svn-id: https://plugins.svn.wordpress.org/wp-piwik/trunk@1167326 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/wp-piwik.css
+++ b/css/wp-piwik.css
@@ -33,3 +33,20 @@ div.wp-piwik-debug {
 tr.wp-piwik-hideDetails {
 	cursor: pointer;
 }
+
+div.wp-piwik-donate {
+	float:right;
+	width:220px;
+	background:#ffc;
+	padding:10px;
+	border:1px solid black;
+	margin: 10px 10px;
+}
+
+div.wp-piwik-donate div {
+	width:190px;
+	text-align:center;
+	border:solid black;
+	border-width:1px 0 0 0 ;
+	padding:5px
+}
